--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -79,4 +79,11 @@
     .form .buttons {
         @apply flex justify-end;
     }
+
+    .show-information {
+        @apply w-full md:w-1/2 lg:w-1/3  items-center justify-center flex flex-col mx-auto space-y-4  ;
+    }
+    .detail-information {
+        @apply space-y-4 w-full;
+    }
 }
